# DRYVbot

./: .gitignore  Doxyfile  README copy.md  README.md  installation.sh  start.sh  test_order.xlsx
Code/simulation_logs/: simulation_2026-06-19_00-08-02.json
Code/src/bcr_bot/: CMakeLists.txt  Dockerfile  README.md  package.xml
Code/src/bcr_bot/config/: mapper_params_online_async.yaml  nav2_params.yaml
Code/src/bcr_bot/launch/: bcr_bot_gazebo_spawn.launch.py  bcr_bot_gz_spawn.launch.py  bcr_bot_ign_spawn.launch.py  gz.launch.py  mapping.launch.py  nav2.launch.py  rviz.launch.py
Code/src/bcr_bot/rviz/: map.rviz
Code/src/bcr_bot/scripts/: remapper.py
Code/src/bcr_bot/urdf/: bcr_bot.xacro  gz.xacro
Code/src/bcr_bot/usd/: ActionGraphFull.usd  bcr_bot.usd  scene.usd  warehouse_scene.usd
Code/src/delivery_optimization/: .env  .env.example  .gitignore  COLCON_IGNORE  boost.json  composer.json  package-lock.json  package.json  tsconfig.json
Code/src/delivery_optimization/app/Enums/: OrderStatus.php  UserRole.php
Code/src/delivery_optimization/app/Events/: DeliveryPlanUpdated.php  DtDataReceived.php  OrderCreated.php  OrderStatusUpdated.php
Code/src/delivery_optimization/app/Imports/: OrderImport.php
Code/src/delivery_optimization/app/Models/: AppSetting.php  DeliveryPlan.php  DtData.php  Medication.php  Order.php  Room.php  User.php
Code/src/delivery_optimization/app/Services/: DeliveryPlannerService.php  DtConnectionSettings.php  DtOutboundQueueService.php  DtStatusService.php  DtTaskQueueService.php  OcrService.php  PredictionService.php
Code/src/delivery_optimization/bootstrap/: app.php
Code/src/delivery_optimization/config/: app.php  dt.php  services.php
Code/src/delivery_optimization/database/factories/: OrderFactory.php  RoomFactory.php  UserFactory.php
Code/src/delivery_optimization/routes/: api.php  channels.php  console.php  settings.php  web.php
Code/src/digital_twin/: package.xml  setup.cfg  setup.py
Code/src/digital_twin/config/: intersection_registry.yaml  logic_params.yaml  nav2_params.yaml  room_registry.yaml
Code/src/digital_twin/digital_twin/: crowd_monitor.py  goal_relay.py  room_interpreter.py  simulation_logger.py  speech_node.py  telemetry_exporter.py  ws_command_bridge.py
Code/src/digital_twin/launch/: corridors.launch.py  full.launch.py  hospital.launch.py  hospital_telemetry.launch.py  logic.launch.py  simulation.launch.py
Code/src/digital_twin/maps/: corridors_map.pgm  custom_warehouse_map.pgm  custom_warehouse_map.yaml  hospital_map.pgm  hospital_map.yaml  warehouse_map.yaml
Code/src/digital_twin_robot/: CMakeLists.txt  package.xml
Code/src/digital_twin_robot/launch/: gazebo_world.launch.py
Code/src/kick_off/: CMakeLists.txt  package.xml
Code/src/kick_off/launch/: gazebo_world.launch.py
Code/src/launch_project/: CMakeLists.txt  package.xml
Code/src/launch_project/launch/: gazebo_world.launch.py
Code/src/robot_simulation/: CMakeLists.txt  package.xml
Code/src/robot_simulation/config/: random_obstacles_params.yaml
Code/src/robot_simulation/launch/: gazebo_world.launch.py
Code/src/robot_simulation/maps/: corridors_map.yaml  warehouse_map.pgm
Code/src/robot_simulation/models/: human_cylinder.sdf
Code/src/robot_simulation/scripts/: controlled_emergency_scenario.py  controlled_patrol_scenarios.py  obstacle_spawner.py  obstacles_fixes.py  random_obstacle_core.py  random_obstacle_spawner.py
Code/src/robot_simulation/test/: test_random_obstacle_core.py  test_random_obstacle_spawner.py
Code/src/robot_simulation/worlds/: corridors.sdf  corridors.world  custom_warehouse.sdf  hospital.world
Code/src/visualization/: package.xml  setup.py
Code/telemetry_logs/: telemetry_data.jsonl
Documentation/doxygen/html/: 2015-01-30_8md.html  AppServiceProvider_8php.html  AppSetting_8php.html  AuthenticatedSessionController_8ts.html  BroadcastController_8ts.html  CHANGELOG_8md.html  CONTRIBUTING_8md.html  CancelOrderRequest_8php.html  Changelog_8md.html  ConfirmablePasswordController_8ts.html  ConfirmedPasswordStatusController_8ts.html  ConfirmedTwoFactorAuthenticationController_8ts.html  ConnectionController_8php.html  ConnectionController_8ts.html  ConnectionUpdateRequest_8php.html  ConsumeDtSocketCommand_8php.html  Controller_8php.html  Controller_8ts.html  CreateNewUser_8php.html  DashboardController_8php.html  DashboardController_8ts.html  DeliveryPlanController_8php.html  DeliveryPlanController_8ts.html  DeliveryPlanUpdated_8php.html  DeliveryPlan_8php.html  DeliveryPlannerService_8php.html  DispatchDtSocketCommand_8php.html  DtConnectionController_8php.html  DtConnectionController_8ts.html  DtConnectionSettings_8php.html  DtConnectionUpdateRequest_8php.html  DtDataReceived_8php.html  DtData_8php.html  DtOutboundQueueService_8php.html  DtStatusService_8php.html  DtTaskQueueService_8php.html  DtWebhookController_8php.html  DtWebhookController_8ts.html  EmailVerificationNotificationController_8ts.html  EmailVerificationPromptController_8ts.html  (+2015 more)
Documentation/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+117 more)
Documentation/extras/: footer.html
Documentation/pages/: ai_layer.md  architecture.md  delivery_optimization.md  foxglove.md  navigation_logic.md  network_connections.md  troubleshooting.md
Foxglove/foxglove_layout/: CloudTwin.json  DRYVbot.json
Foxglove/foxglove_panels/room-command-panel/: CHANGELOG.md  README.md  cloudtwin.room-command-panel-1.0.0.foxe  cloudtwin.room-command-panel-2.0.0.foxe  package-lock.json  package.json  unknown.room-command-panel-0.0.0.foxe
Foxglove/foxglove_panels/room-command-panel/src/: RoomCommandPanel.ts  index.ts
(+57 files in other folders)
