<?xml version="1.0"?>
<package format="2">
	<name>bcr_bot</name>
	<version>1.0.2</version>
	<description>bcr_bot</description>

	<maintainer email="gaurav@blackcoffeerobotics.com">Gaurav Gupta</maintainer>
	<maintainer email="devanshu@blackcoffeerobotics.com">Devanshu Sharma</maintainer>
	<maintainer email="angelo@blackcoffeerobotics.com">Angelo Antu</maintainer>
	<license>Apache License 2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>ament_index_python</exec_depend>
	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>xacro</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
