<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_project</name>
  <version>2.1.0</version>
  <description>Centralised launch files for the Digital Twin project</description>
  <maintainer email="vskarleas@icloud.com">vskarleas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Packages that the launch files reference -->
  <exec_depend>robot_simulation</exec_depend>
  <exec_depend>digital_twin</exec_depend>
  <exec_depend>visualization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
