<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_simulation</name>
  <version>0.1.0</version>
  <description>Simulated robot environment - Gazebo world, TurtleBot3, and dynamic obstacles</description>
  <maintainer email="vskarleas@icloud.com">vskarleas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Gazebo Fortress (Ignition) -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- TurtleBot3 -->
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>

  <!-- ROS2 core -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- Gazebo -->
  <exec_depend>gazebo_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>