<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visualization</name>
  <version>2.3.1</version>
  <description>Visualization and control interface. Provides a Foxglove web UI to monitor the robot in real-time, view the planned path, and select navigation goals.</description>
  <maintainer email="vskarleas@icloud.com">vskarleas</maintainer>
  <license>MIT</license>

   <buildtool_depend>ament_python</buildtool_depend>
 
  <!-- Foxglove bridge -->
  <exec_depend>foxglove_bridge</exec_depend>
 
  <!-- ROS2 core -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
